--- a/reporttitleblock.sty
+++ b/reporttitleblock.sty
@@ -1,4 +1,4 @@
-% reporttitleblock.sty
+ % reporttitleblock.sty
 % Title block helpers for the technical report template.
 %
 % Provides:
@@ -36,9 +36,10 @@
 \prop_new:N \g_report_affils_prop
 \bool_new:N \g_report_has_equal_bool
 \seq_new:N \g_report_corr_emails_seq
+\seq_new:N \g_report_all_emails_seq
 
-\tl_gset:Nn \g_report_equal_note_tl { These~authors~contributed~equally. }
-\tl_gset:Nn \g_report_corr_label_tl { Corresponding~author(s): }
+\tl_gset:Nn \g_report_equal_note_tl {These~authors~contributed~equally }
+\tl_gset:Nn \g_report_corr_label_tl {Corresponding~author }
 
 \NewDocumentCommand{\ReportTitle}{m}{\tl_gset:Nn \g_report_title_tl {#1}}
 \NewDocumentCommand{\ReportSubtitle}{m}{\tl_gset:Nn \g_report_subtitle_tl {#1}}
@@ -49,6 +50,7 @@
   \seq_gclear:N \g_report_authors_seq
   \bool_gset_false:N \g_report_has_equal_bool
   \seq_gclear:N \g_report_corr_emails_seq
+  \seq_gclear:N \g_report_all_emails_seq
 }
 \NewDocumentCommand{\ReportClearAffils}{}{
   \seq_gclear:N \g_report_affil_keys_seq
@@ -65,6 +67,7 @@
 \NewDocumentCommand{\ReportAuthor}{m m O{} G{}}{
   \seq_gput_right:Nn \g_report_authors_seq { {#1}{#2}{#3}{#4} }
   \clist_if_in:nnT {#3} {equal} { \bool_gset_true:N \g_report_has_equal_bool }
+  \tl_if_blank:nF {#4} { \seq_gput_right:Nn \g_report_all_emails_seq {#4} }
   \clist_if_in:nnT {#3} {corresponding} {
     \tl_if_blank:nF {#4} { \seq_gput_right:Nn \g_report_corr_emails_seq {#4} }
   }
@@ -104,8 +107,15 @@
       { \sort_return_same: }
   }
   {\small\color{titlegray}\itshape
+    \int_zero:N \l_tmpa_int
+    \int_set:Nn \l_tmpb_int { \seq_count:N \l_tmpa_seq }
     \seq_map_inline:Nn \l_tmpa_seq
-      { \textsuperscript{##1}\prop_item:Nn \g_report_affils_prop {##1}\par }
+      {
+        \int_incr:N \l_tmpa_int
+        \textsuperscript{##1}\prop_item:Nn \g_report_affils_prop {##1}
+        \int_compare:nNnT { \l_tmpa_int } < { \l_tmpb_int } { \quad }
+      }
+    \par
   }
 }
 
@@ -116,17 +126,16 @@
     { \texttt{#1} }
 }
 
-\cs_new_protected:Npn \report_print_author_notes:
+% Print a single "Email: ..." line under affiliations (optional).
+% This macro is used by \MakeReportTitleBlock.
+\cs_set_protected:Npn \report_print_emails_under_affils:
 {
-  {\footnotesize\color{titlegray}
-    \bool_if:NT \g_report_has_equal_bool
-      { \textsuperscript{\textdagger}\tl_use:N \g_report_equal_note_tl\par }
-
-    \seq_if_empty:NF \g_report_corr_emails_seq
-    {
-      \seq_set_eq:NN \l_tmpa_seq \g_report_corr_emails_seq
-      \seq_remove_duplicates:N \l_tmpa_seq
-      \textsuperscript{*}\tl_use:N \g_report_corr_label_tl
+  \seq_if_empty:NF \g_report_all_emails_seq
+  {
+    \seq_set_eq:NN \l_tmpa_seq \g_report_all_emails_seq
+    \seq_remove_duplicates:N \l_tmpa_seq
+    {\small\color{titlegray}\itshape
+      Email:\space
       \int_zero:N \l_tmpa_int
       \int_set:Nn \l_tmpb_int { \seq_count:N \l_tmpa_seq }
       \seq_map_inline:Nn \l_tmpa_seq
@@ -138,6 +147,57 @@
       \par
     }
   }
+}
+
+% Print a single "Email: ..." line under affiliations (optional).
+% This macro is used by \MakeReportTitleBlock.
+\cs_set_protected:Npn \report_print_emails_under_affils:
+{
+  \seq_if_empty:NF \g_report_all_emails_seq
+  {
+    \seq_set_eq:NN \l_tmpa_seq \g_report_all_emails_seq
+    \seq_remove_duplicates:N \l_tmpa_seq
+    {\small\color{titlegray}\itshape
+      Email:\space
+      \int_zero:N \l_tmpa_int
+      \int_set:Nn \l_tmpb_int { \seq_count:N \l_tmpa_seq }
+      \seq_map_inline:Nn \l_tmpa_seq
+      {
+        \int_incr:N \l_tmpa_int
+        \report_mailto:n {##1}
+        \int_compare:nNnT { \l_tmpa_int } < { \l_tmpb_int } {,~}
+      }
+      \par
+    }
+  }
+}
+
+% A footnote-like line without any numeric mark.
+% We implement it by temporarily emptying the mark and using \footnotetext.
+\cs_gset_protected:Npn \report_unmarked_footnotetext:n #1
+{
+  \begingroup
+    \makeatletter
+    \let\@thefnmark\@empty
+    \let\thefootnote\@empty
+    \footnotetext{#1}
+  \endgroup
+}
+
+% Put author notes (equal contribution, corresponding author, emails) into footnotes.
+\cs_new_protected:Npn \report_footnote_author_notes:
+{
+  % All lines below should be unnumbered (no leading 0,1,2,...).
+  \bool_if:NT \g_report_has_equal_bool
+    { \report_unmarked_footnotetext:n { \textsuperscript{\textdagger}\tl_use:N \g_report_equal_note_tl } }
+
+  \seq_if_empty:NF \g_report_corr_emails_seq
+  {
+    \seq_set_eq:NN \l_tmpa_seq \g_report_corr_emails_seq
+    \seq_remove_duplicates:N \l_tmpa_seq
+    \report_unmarked_footnotetext:n { \textsuperscript{*}\tl_use:N \g_report_corr_label_tl }
+  }
+
 }
 
 \NewDocumentCommand{\MakeReportTitleBlock}{}{
@@ -153,9 +213,10 @@
       \report_print_authors_line:
       \vspace{0.4em}
       \report_print_affils:
+      \report_print_emails_under_affils:
       \vspace{0.3em}
-      \report_print_author_notes:
     }
   }\par\vspace{0.8em}
+  \report_footnote_author_notes:
 }
 \ExplSyntaxOff
