--- a/sections/title.tex
+++ b/sections/title.tex
@@ -4,13 +4,15 @@
 \ReportClearAffils{}
 \ReportClearAuthors{}
 
-\ReportTitle{Title of the Report}
+\ReportTitle{Title: COLALab Technical Report}
+\ReportTitleMark{}
+\ReportAcceptedNote{Accepted as a conference paper at xxxx}
 \ReportSubtitle{COLALab Technical Report \textbar\ \today}
 
 \ReportAffil{1}{Department, Institution, City, Country}
 \ReportAffil{2}{Department, Institution, City, Country}
 
-\ReportAuthor{First Author}{1}[equal]{}
-\ReportAuthor{Second Author}{1}[equal]{}
+\ReportAuthor{First Author}{1}[equal]{author@example.com}
+\ReportAuthor{Second Author}{1}[equal]{second.author@example.com}
 \ReportAuthor{Corresponding Author}{1}[corresponding]{corresponding.author@example.com}
 
