Make project repo link clickable in abstract
Updated project repository link to be clickable.

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -15,4 +15,6 @@
 \vspace{0.6em}
 {\normalsize\textbf{\color{natureblue}Keywords: }}technical report, LaTeX, template
 \par
-{\normalsize\textbf{\color{natureblue}Project Repo: }}\texttt{[REPO\_URL]}
+{\normalsize\textbf{\color{natureblue}Project Repo: }}
+\texttt{\href{https://github.com/COLA-Laboratory/colalab_template}
+{https://github.com/COLA-Laboratory/colalab\_template}}
