--- a/sections/title.tex
+++ b/sections/title.tex
@@ -4,10 +4,9 @@
 \ReportClearAffils{}
 \ReportClearAuthors{}
 
-\ReportTitle{Title: COLALab Technical Report}
+\ReportTitle{COLAlab Report}
 \ReportTitleMark{}
 \ReportAcceptedNote{Accepted as a conference paper at xxxx}
-\ReportSubtitle{COLALab Technical Report \textbar\ \today}
 
 \ReportAffil{1}{Department, Institution, City, Country}
 \ReportAffil{2}{Department, Institution, City, Country}
@@ -15,4 +14,3 @@
 \ReportAuthor{First Author}{1}[equal]{author@example.com}
 \ReportAuthor{Second Author}{1}[equal]{second.author@example.com}
 \ReportAuthor{Corresponding Author}{1}[corresponding]{corresponding.author@example.com}
-
