--- a/main.tex
+++ b/main.tex
@@ -52,13 +52,28 @@
 \usepackage{lastpage}  % \pageref{LastPage} for total page count
 \usepackage{fontawesome5} % flat icons for footer etc.
 
-% ── Page numbering: icon + "page / total" in the bottom-right ─────────────
-\pagestyle{fancy}
-\fancyhf{}                              % clear all header / footer fields
-\renewcommand{\headrulewidth}{0pt}      % no header rule
-\renewcommand{\footrulewidth}{0pt}      % no footer rule
-\fancyfoot[C]{\small{\color{headerblue}\faBookOpen}~~\thepage\ /\pageref{LastPage}}
-\fancypagestyle{plain}{\fancyhf{}\fancyfoot[C]{\small{\color{headerblue}\faBookOpen}~~\thepage\ /\pageref{LastPage}}}
+% ── Footer: page x/xx on all pages; first page also shows title + date ──────
+\newcommand{\PageCounterText}{%
+  {\small\color{headerblue}\faBookOpen~~\textbf{\thepage}/\pageref{LastPage}}%
+}
+\newcommand{\FirstPageFooterLeft}{%
+  \small{\color{headerblue}\faIcon[regular]{book}}~~%
+  {\small\color{headerblue}\textbf{\ReportTitleText\ | \today}}%
+}
+\fancypagestyle{allpagesfooter}{%
+  \fancyhf{}%
+  \renewcommand{\headrulewidth}{0pt}%
+  \renewcommand{\footrulewidth}{0pt}%
+  \fancyfoot[R]{\PageCounterText}%
+}
+\fancypagestyle{firstpagefooter}{%
+  \fancyhf{}%
+  \renewcommand{\headrulewidth}{0pt}%
+  \renewcommand{\footrulewidth}{0pt}%
+  \fancyfoot[L]{\FirstPageFooterLeft}%
+  \fancyfoot[R]{\PageCounterText}%
+}
+\pagestyle{allpagesfooter}
 
 % Define a few colors for making text stand out within the presentation
 \definecolor{myblue}{RGB}{34,31,217}
@@ -127,6 +142,7 @@
 \usepackage{lscape}
 
 \begin{document}
+\thispagestyle{firstpagefooter}
 
 % ── Logo in top-left corner of the first page ──────────────────────────────
 \AddToShipoutPictureBG*{%
