--- a/main.tex
+++ b/main.tex
@@ -58,7 +58,7 @@
 }
 \newcommand{\FirstPageFooterLeft}{%
   \small{\color{headerblue}\faIcon[regular]{book}}~~%
-  {\small\color{headerblue}\textbf{\ReportTitleText\ | \today}}%
+  {\small\color{headerblue}\textbf{\ReportTitleMarkText\ | \today}}%
 }
 \fancypagestyle{allpagesfooter}{%
   \fancyhf{}%
