--- a/sections/title.tex
+++ b/sections/title.tex
@@ -4,8 +4,8 @@
 \ReportClearAffils{}
 \ReportClearAuthors{}
 
-\ReportTitle{COLAlab Report}
-\ReportTitleMark{}
+\ReportTitle{Title: COLAlab template}
+\ReportTitleMark{COLAlab Report}
 \ReportAcceptedNote{Accepted as a conference paper at xxxx}
 
 \ReportAffil{1}{Department, Institution, City, Country}
