--- a/sections/title.tex
+++ b/sections/title.tex
@@ -6,7 +6,7 @@
 
 \ReportTitle{Title: COLAlab template}
 \ReportTitleMark{COLAlab Report}
-\ReportAcceptedNote{Accepted as a conference paper at xxxx}
+\ReportAcceptedNote{Under review}
 
 \ReportAffil{1}{Department, Institution, City, Country}
 \ReportAffil{2}{Department, Institution, City, Country}
